--- a/styles/scss/partials/scaffolding/inc/_header_elements.scss
+++ b/styles/scss/partials/scaffolding/inc/_header_elements.scss
@@ -160,11 +160,11 @@
 		
 		li {
 			display: inline-block;
-			margin-left: 12px;
+			margin-left: 10px;
 
 			a {
 				color: inherit;
-				font-size: 26px;
+				font-size: 24px;
 				opacity: 0.7;
 				
 				&:hover { opacity: 1;}
@@ -189,7 +189,7 @@
 	color: var(--menu-text);
 	border-radius: 5px;
 	font-weight: 600;
-	padding: 6px 25px;
+	padding: 7px 27px;
 	line-height: 1.8;
 	margin: 0 10px;
 }
